--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       
       <!-- Optional: Company Logo Preview -->
       <div class="mb-4 text-center">
-        <img src="assets/darklogo2.png" alt="Company Logo" id="form-logo" style="max-width: 200px;">
+        <img src="https://lh4.googleusercontent.com/3V73wOQ05wHrc2ytYs9m-nevOwktL0VfgD5aelBrxVcxDFYw0zpmy6co8w-Don93l643vyMso_2MpWHlbfAQkd2XsPZWoEW7n9oA0A3L1OKsdbI7pw7h8gMfl24yXvLNIA=w1280" alt="Company Logo" id="form-logo" style="max-width: 200px;">
       </div>
       
       <!-- Invoice To Section -->
